# NeuraOS

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
crates/neura-ai-core/: Cargo.toml
crates/neura-ai-core/src/: lib.rs  ollama_manager.rs
crates/neura-ai-core/src/agent/: engine.rs  executor.rs  guardrails.rs  mod.rs  planner.rs  tool_registry.rs
crates/neura-ai-core/src/gemini/: client.rs  mod.rs  retry.rs  streaming.rs  tools.rs
crates/neura-ai-core/src/memory/: long_term.rs  mod.rs  short_term.rs  system.rs
crates/neura-ai-core/src/provider/: factory.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  types.rs
crates/neura-app-framework/: Cargo.toml
crates/neura-app-framework/src/: app_trait.rs  config.rs  consts.rs  lib.rs  lifecycle.rs  palette.rs  sandbox.rs
crates/neura-apps/: Cargo.toml
crates/neura-apps/src/: agent_tools.rs  lib.rs  placeholder.rs
crates/neura-apps/src/backup/: mod.rs
crates/neura-apps/src/browser/: mod.rs
crates/neura-apps/src/calc/: mod.rs
crates/neura-apps/src/calendar/: mod.rs
crates/neura-apps/src/chat/: mod.rs
crates/neura-apps/src/clock/: mod.rs
crates/neura-apps/src/contacts/: mod.rs
crates/neura-apps/src/dev/: mod.rs
crates/neura-apps/src/files/: mod.rs
crates/neura-apps/src/mail/: mod.rs
crates/neura-apps/src/media/: mod.rs
crates/neura-apps/src/monitor/: mod.rs
crates/neura-apps/src/notes/: mod.rs
crates/neura-apps/src/ollama_setup/: mod.rs
crates/neura-apps/src/settings/: mod.rs
crates/neura-apps/src/sysinfo_app/: mod.rs
crates/neura-apps/src/tasks/: mod.rs
crates/neura-apps/src/terminal_app/: mod.rs
crates/neura-apps/src/weather/: mod.rs
crates/neura-config/: Cargo.toml
crates/neura-config/src/: lib.rs  loader.rs  schema.rs
crates/neura-desktop/: Cargo.toml
crates/neura-desktop/src/: input.rs  lib.rs  renderer.rs  statusbar.rs  theme.rs  window.rs  workspaces.rs
crates/neura-kernel/: Cargo.toml
crates/neura-kernel/src/: fs_ops.rs  lib.rs  signal.rs  syscall.rs
crates/neura-logging/: Cargo.toml
crates/neura-logging/src/: lib.rs  subscriber.rs
crates/neura-network/: Cargo.toml
crates/neura-network/src/: http.rs  lib.rs  tcp.rs  websocket.rs
crates/neura-pkg/: Cargo.toml
crates/neura-pkg/src/: lib.rs  registry.rs
crates/neura-plugins/: Cargo.toml
crates/neura-plugins/src/: lib.rs  loader.rs  registry.rs
crates/neura-process/: Cargo.toml
crates/neura-process/src/: lib.rs  lifecycle.rs  scheduler.rs  task.rs
crates/neura-security/: Cargo.toml
crates/neura-security/src/: crypto.rs  lib.rs  permissions.rs  sandbox.rs  signing.rs
crates/neura-services/: Cargo.toml
crates/neura-services/src/: daemon.rs  dependency.rs  lib.rs  registry.rs
crates/neura-shell/: Cargo.toml
crates/neura-shell/src/: builtins.rs  context.rs  executor.rs  lib.rs  parser.rs
crates/neura-storage/: Cargo.toml
crates/neura-storage/src/: lib.rs  paths.rs
crates/neura-storage/src/db/: connection.rs  migration.rs  mod.rs  query.rs
crates/neura-storage/src/vfs/: journal.rs  mod.rs  node.rs  permissions.rs  transaction.rs
crates/neura-users/: Cargo.toml
crates/neura-users/src/: account.rs  auth.rs  lib.rs  password.rs  roles.rs
crates/neuraos/: Cargo.toml  build.rs
crates/neuraos/src/: main.rs
docs/: ARCHITECTURE.md
scripts/: setup.ps1  setup.sh
