[package]
name = "neura-ai-core"
description = "AI agent engine with Gemini client, tool execution, and memory system for NeuraOS"
version.workspace = true
edition.workspace = true

[dependencies]
neura-kernel = { workspace = true }
neura-storage = { workspace = true }
neura-security = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
