[package]
name = "neura-apps"
description = "Built-in applications for NeuraOS"
version.workspace = true
edition.workspace = true

[dependencies]
neura-kernel = { workspace = true }
neura-storage = { workspace = true }
neura-app-framework = { workspace = true }
neura-ai-core = { workspace = true }
neura-network = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
lettre = { workspace = true }
imap = { workspace = true }
native-tls = { workspace = true }
mailparse = { workspace = true }
rodio = { workspace = true }
lofty = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
