[package]
name = "neura-config"
description = "TOML-based configuration engine with hot reload for NeuraOS"
version.workspace = true
edition.workspace = true

[dependencies]
neura-kernel = { workspace = true }
neura-app-framework = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
