[package]
name = "neura-logging"
description = "Structured logging, tracing integration, and log rotation for NeuraOS"
version.workspace = true
edition.workspace = true

[dependencies]
neura-kernel = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
