[package]
name = "neura-process"
description = "Process abstraction, task scheduling, and lifecycle management for NeuraOS"
version.workspace = true
edition.workspace = true

[dependencies]
neura-kernel = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
