[package]
name = "neura-services"
description = "Daemon supervisor, service registry, and dependency resolution for NeuraOS"
version.workspace = true
edition.workspace = true

[dependencies]
neura-kernel = { workspace = true }
neura-process = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
