[package]
name = "neura-users"
description = "Multi-user account system with authentication and RBAC for NeuraOS"
version.workspace = true
edition.workspace = true

[dependencies]
neura-kernel = { workspace = true }
neura-storage = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
